<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/calltaxitextbg2"

    tools:context="com.haldane.katherine.taxi2me.CallCab">


    <EditText
        android:textColor="#4E3F30"
        android:textColorHint="#F8F4E4"
        android:padding="10dp"
        android:background="@drawable/buttonbg"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ipAddress"
        android:hint="ip address"
        android:layout_alignParentTop="true"/>

    <EditText
        android:textColor="#4E3F30"
        android:textColorHint="#F8F4E4"
        android:padding="10dp"
        android:background="@drawable/buttonbg"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/portNumber"
        android:hint="port"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ipAddress"/>
    <Button
        android:background="#00000000"
        android:visibility="visible"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:id="@+id/buttonCallCab"
        android:layout_weight="0.03"
        android:onClick="onButtonClick"
        android:layout_marginBottom="116dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:id="@+id/showLayout"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@drawable/textbackground"
            android:padding="10dp"
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
            android:textColor="#4E3F30"
            android:textColorHint="#F8F4E4"
            android:padding="10dp"
            android:background="@drawable/buttonbg"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPrefNum"
            android:hint="Callback Number"/>

        <RadioGroup
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonbg"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:textColor="#4E3F30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cashrbtn"
                android:id="@+id/radioButtonCash"
                android:checked="true"
                android:onClick="onClick" />

            <RadioButton
                android:textColor="#4E3F30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbCredit"
                android:id="@+id/radioButtonCreditByPhone"
                android:checked="false"
                android:onClick="onClick" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/creditInfo"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textColor="#4E3F30"
                android:textColorHint="#F8F4E4"
                android:layout_marginTop="10dp"
                android:hint="Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editName"
                android:background="@drawable/buttonbg"
                android:padding="10dp"/>

            <EditText
                android:textColor="#4E3F30"
                android:textColorHint="#F8F4E4"
                android:editable="false"
                android:hint="Credit Card Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editCardType"
                android:background="@drawable/buttonbg"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <Spinner
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerEditCard"
                android:spinnerMode="dropdown"
                android:background="@drawable/buttonbg"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:inputType="number"
                android:textColor="#4E3F30"
                android:textColorHint="#F8F4E4"
                android:hint="Credit Card Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editCardNumber"
                android:background="@drawable/buttonbg"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <EditText
                android:inputType="number"
                android:textColor="#4E3F30"
                android:textColorHint="#F8F4E4"
                android:hint="CCV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editCCV"
                android:background="@drawable/buttonbg"
                android:padding="10dp"
                android:layout_marginTop="5dp" />

            <EditText
                android:textColor="#4E3F30"
                android:textColorHint="#F8F4E4"
                android:editable="false"
                android:hint="YYYY/MM/DD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editDate"
                android:background="@drawable/buttonbg"
                android:padding="10dp"
                android:layout_marginTop="5dp"/>

            <DatePicker
                android:layout_marginTop="5dp"
                android:background="@drawable/buttonbg"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:id="@+id/editDatePicker"
                android:calendarViewShown="false"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:gravity="center_horizontal">

                <Button
                    android:textColor="#00B9BD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="edit"
                    android:background="#00000000"
                    android:id="@+id/editIcon"
                    android:onClick="onClick" />

                <Button
                    android:textColor="#00B9BD"
                    android:visibility="gone"
                    android:background="#00000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Save_Icon"
                    android:id="@+id/saveIcon"
                    android:onClick="onClick" />

                <Button
                    android:textColor="#00B9BD"
                    android:visibility="gone"
                    android:background="#00000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="save"
                    android:id="@+id/cancelIcon"
                    android:onClick="onClick" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:textColor="#F8F4E4"
                android:background="@drawable/buttonshape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Call_Cab"
                android:id="@+id/buttonCall"
                android:onClick="onButtonClick"
                android:layout_marginTop="10dp"/>

            <Button
                android:textColor="#F8F4E4"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttonshape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Cancel"
                android:id="@+id/buttonCancelCall"
                android:onClick="onButtonClick" />
        </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
